Mejoras en label

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -62,7 +62,7 @@
                         Fecha <input aria-label="Fecha" type="text" name="fecha"/>
                     </label>
                     <label for="precio">
-                        Precio <input aria-label="Precio" type="number" name="precio" step="0.1"/>
+                        Precio en € <input aria-label="Precio" type="number" name="precio" step="0.1"/>
                     </label>
                     <label for="descripcion">
                         Descripción <textarea aria-label="Descripción" name="descripcion" rows="8" cols="50"></textarea>
@@ -116,7 +116,7 @@
                         Nueva fecha <input type="text" aria-label="Nueva fecha" name="nuevaFecha"/>
                     </label>
                     <label for="nuevoPrecio">
-                        Nuevo precio <input type="number" aria-label="Nuevo precio" name="nuevoPrecio" step="0.1"/>
+                        Nuevo precio en € <input type="number" aria-label="Nuevo precio" name="nuevoPrecio" step="0.1"/>
                     </label>
                     <label for="nuevaDescripcion">
                         Nueva descripción <textarea name="nuevaDescripcion" aria-label="Nueva descripción" rows="8" cols="50"></textarea>
