--- a/src/www/index.html
+++ b/src/www/index.html
@@ -165,7 +165,8 @@
                         <img id="imgAChecker" src="assets/icon_W2_aa.jpg" alt="WCAG 2.0 (Level AA)" tabindex="0" role="link"/>
                     </a>
                 </p>
-                <p id="pTiempo"></p>
+                <button type="button" id="buttonTiempo">Mostrar predicción meteorologica</button>
+                <div id="divTiempo"></div>
             </div>
         </footer>
 
