--- a/src/www/index.html
+++ b/src/www/index.html
@@ -165,6 +165,9 @@
                         <img id="imgAChecker" src="assets/icon_W2_aa.jpg" alt="WCAG 2.0 (Level AA)" tabindex="0" role="link"/>
                     </a>
                 </p>
+                <button type="button" id="buttonTiempo" class="boton">
+                    Mostrar/ocultar predicción meteorológica
+                </button>
                 <p id="pTiempo"></p>
             </div>
         </footer>
