--- a/src/www/index.html
+++ b/src/www/index.html
@@ -59,7 +59,7 @@
                         Nombre <input aria-label="Nombre" type="text" name="nombre"/>
                     </label>
                     <label for="fecha">
-                        Fecha <input aria-label="Fecha" type="text" name="fecha"/>
+                        Fecha <input aria-label="Fecha" type="text" title="La fecha en la que se lanzó el producto." name="fecha"/>
                     </label>
                     <label for="precio">
                         Precio en € <input aria-label="Precio" type="number" name="precio" step="0.1"/>
@@ -113,7 +113,7 @@
                         Nuevo nombre <input type="text" aria-label="Nuevo nombre" name="nuevoNombre"/>
                     </label>
                     <label for="nuevaFecha">
-                        Nueva fecha <input type="text" aria-label="Nueva fecha" name="nuevaFecha"/>
+                        Nueva fecha <input type="text" title="La fecha en la que se lanzó el producto." aria-label="Nueva fecha" name="nuevaFecha"/>
                     </label>
                     <label for="nuevoPrecio">
                         Nuevo precio en € <input type="number" aria-label="Nuevo precio" name="nuevoPrecio" step="0.1"/>
