Cookies y avisos legales

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -46,19 +46,41 @@
         </header>
 
         <main>
+            <!-- Cookies -->
+            <div id="divCookies">
+                <div class="cookieContainer">
+                    <div class="cookieSubcontainer">
+                        <div class="cookies">
+                            <p>
+                                Utilizamos cookies para habilitar el funcionamiento y la seguridad adecuados de nuestros sitios web, 
+                                y para ayudarnos a ofrecerte la mejor experiencia de usuario posible. Al hacer clic en Aceptar, 
+                                aceptas el uso de estas cookies. Puedes cambiar la configuración de las cookies en cualquier momento.
+                                <a href="assets/politicaCookies.pdf">Más información.</a>
+                            </p>
+                            <div>
+                                <button class="buttonCookie">No aceptar</button>
+                                <button class="buttonCookie">Aceptar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Listado -->
             <div id="divListado" role="list">
                 <p class="pAviso">No hay ningún registro.</p>
+                <!--
                 <Producto 
-                    :nombreItem="'nombre'" 
-                    :urlFoto="'urlFoto'" 
-                    :precioItem="123" 
-                    :descripcionItem="'descripcion'" 
-                    :tipoProducto="'tipo'"
-                    :fechaLanzamiento="13/08/2023"
-                    :seguro1="true"
-                    :seguro2="false"
-                    :seguro3="false"/>
+                :nombre_item="'nombre'" 
+                :url_foto="'urlFoto'" 
+                :precio_item="123" 
+                :descripcion_item="'descripcion'" 
+                :tipo_producto="'tipo'"
+                :fecha_lanzamiento="13/08/2023"
+                :seguro1="true"
+                :seguro2="false"
+                :seguro3="false"/>
+                -->
             </div>
 
             <!-- Alta -->
@@ -104,6 +126,10 @@
                             <option value="7">Torre</option>
                             <option value="8">Otro</option>
                         </select>  
+                    </label>
+                    <label for="checkboxAvisoAlta">
+                        <input type="checkbox" aria-label="Checkbox privacidad" name="checkboxAvisoAlta"/>
+                        Acepto sin reservas la política de protección de datos personales.
                     </label>
                     <div class="divBotonesForm">
                         <button type="button" id="botonCancelar">Cancelar</button>
@@ -159,6 +185,10 @@
                             <option value="8">Otro</option>
                         </select>  
                     </label>
+                    <label for="checkboxAvisoMod">
+                        <input type="checkbox" aria-label="Checkbox privacidad" name="checkboxAvisoMod"/>
+                        Acepto sin reservas la política de protección de datos personales.
+                    </label>
                     <div class="divBotonesForm">
                         <button type="button" id="botonBorrar">Cancelar</button>
                         <button type="button" id="botonActualizar">Aceptar</button>
@@ -179,6 +209,12 @@
                     Mostrar/ocultar predicción meteorológica
                 </button>
                 <p id="pTiempo"></p>
+
+                <div id="divLegalidad">
+                    <p>
+                        <a href="infoLegal.html">Aviso legal / LOPD / Aviso de propiedad intelectual</a>
+                    </p>
+                </div>
             </div>
         </footer>
 
@@ -189,7 +225,7 @@
         <script src="../jquery-ui-1.13.2.custom/jquery-ui.js"></script>
 
         <!-- VUE 3 -->
-        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+        <script src="js/vue.global.js"></script>
         <script type="module" src="js/main.js"></script>
 
         <!-- Componentes VUE -->
