Todas las cookies añadidas

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -58,7 +58,7 @@
                                 <a href="assets/politicaCookies.pdf">Más información.</a>
                             </p>
                             <div>
-                                <button class="buttonCookie">No aceptar</button>
+                                <button class="buttonCookie">Rechazar</button>
                                 <button class="buttonCookie">Aceptar</button>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                     </label>
                     <label for="checkboxAvisoAlta">
                         <input type="checkbox" aria-label="Checkbox privacidad" name="checkboxAvisoAlta"/>
-                        Acepto sin reservas la política de protección de datos personales.
+                        Acepto sin reservas la <a href="infoLegal.html">política de protección de datos personales.</a>
                     </label>
                     <div class="divBotonesForm">
                         <button type="button" id="botonCancelar">Cancelar</button>
@@ -187,7 +187,7 @@
                     </label>
                     <label for="checkboxAvisoMod">
                         <input type="checkbox" aria-label="Checkbox privacidad" name="checkboxAvisoMod"/>
-                        Acepto sin reservas la política de protección de datos personales.
+                        Acepto sin reservas la <a href="infoLegal.html">política de protección de datos personales.</a>
                     </label>
                     <div class="divBotonesForm">
                         <button type="button" id="botonBorrar">Cancelar</button>
