--- a/src/www/infoLegal.html
+++ b/src/www/infoLegal.html
@@ -5,6 +5,7 @@
         <meta author="David Pérez Saché"/>
         <title>Información legal</title>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <link rel="icon" type="image/x-icon" href="../../diseno/logo-icono.png"/>
         <link rel="stylesheet" type="text/css" href="../www/css/styles.css"/>
     </head>
     <body>
@@ -22,7 +23,7 @@
 
             <hr/>
 
-            <h1>LOPD</h1>
+            <h1>Política de protección de datos personales</h1>
             <p>
                 En CoolPC tratamos la información que nos facilita con el fin de prestarles el servicio solicitado y realizar su facturación. Los datos proporcionados 
                 se conservarán mientras se mantenga la relación comercial o durante el tiempo necesario para cumplir con las obligaciones legales y atender las posibles 
@@ -44,6 +45,10 @@
             <h1>Propiedad Intelectual</h1>
             <p>
                 Todos los derechos reservados © 2023 - David Pérez Saché 
+                <ul>
+                    <li>Logo: creado por mí, bajo licencia <a href="https://choosealicense.com/licenses/lgpl-3.0/" target="_blank">GPL 3.0</a></li>
+                    <li>Fuente: <a href="https://fonts.google.com/specimen/Roboto/about" target="_blank">Roboto</a></li>
+                </ul>
             </p>
         </div>
     </body>
