--- a/src/www/infoLegal.html
+++ b/src/www/infoLegal.html
@@ -50,6 +50,11 @@
                     <li>Fuente: <a href="https://fonts.google.com/specimen/Roboto/about" target="_blank">Roboto</a></li>
                 </ul>
             </p>
+
+            <hr/>
+
+            <h1>Política de cookies</h1>
+            <p>Refiérase al siguiente <a href="assets/politicaCookies.pdf" target="_blank">documento explicativo</a>.</p>
         </div>
     </body>
 </html>
