--- a/src/www/index.html
+++ b/src/www/index.html
@@ -18,29 +18,8 @@
             <nav>
                 <div id="divCabecera">
                     <img src="../../diseno/logo.png" draggable="false" alt="Logo de CoolPC" id="imgLogo"/>
-                    <div id="divBusqueda" role="">
-                        <label id="labelBuscar" for="buscar">
-                            Búsqueda<br/> 
-                            <input id="buscar" role="searchbox" aria-label="Búsqueda" name="buscar" type="text" maxlength="50"/>
-                        </label>
-                        <button type="button" class="boton">
-                            <span class="material-icons" role="img" aria-label="Buscar">search</span>
-                        </button>
-                    </div>
-                    <div id="divBotones" role="menubar">
-                        <button type="button" id="buttonListado" role="menuitem">
-                            Listado de componentes 
-                            <span class="material-icons" role="img" aria-label="Listar">list</span>
-                        </button>
-                        <button type="button" id="buttonAlta" role="menuitem">
-                            Alta de componente
-                            <span class="material-icons" role="img" aria-label="Añadir">add</span>
-                        </button>
-                        <button type="button" id="buttonModificar" role="menuitem">
-                            Modificar componente
-                            <span class="material-icons" role="img" aria-label="Editar">edit</span>
-                        </button>
-                    </div>
+                    <div id="divBusqueda"></div>
+                    <div id="divBotones"></div>
                 </div>
             </nav>
         </header>
@@ -67,76 +46,10 @@
             </div>
 
             <!-- Listado -->
-            <div id="divListado" role="list">
-                <p class="pAviso">No hay ningún registro.</p>
-                <!--
-                <Producto 
-                :nombre_item="'nombre'" 
-                :url_foto="'urlFoto'" 
-                :precio_item="123" 
-                :descripcion_item="'descripcion'" 
-                :tipo_producto="'tipo'"
-                :fecha_lanzamiento="13/08/2023"
-                :seguro1="true"
-                :seguro2="false"
-                :seguro3="false"/>
-                -->
-            </div>
+            <div id="divListado" role="list"></div>
 
             <!-- Alta -->
-            <div id="divAlta">
-                <p class="pAviso"></p>
-                <form id="formAlta">
-                    <label for="nombre">
-                        Nombre <input aria-label="Nombre" type="text" name="nombre"/>
-                    </label>
-                    <label for="fecha">
-                        Fecha <input aria-label="Fecha" type="text" title="La fecha en la que se lanzó el producto." name="fecha"/>
-                    </label>
-                    <label for="precio">
-                        Precio en € <input aria-label="Precio" type="number" name="precio" step="0.1"/>
-                    </label>
-                    <label for="descripcion">
-                        Descripción <textarea aria-label="Descripción" name="descripcion" rows="8" cols="50"></textarea>
-                    </label>
-                    <label for="subirImagen">
-                        Subir imagen <input type="file" aria-label="Imagen" name="subirImagen" accept="image/png, image/jpeg"/>
-                    </label>
-                    <fieldset>
-                        <legend>Seguros que tiene el producto</legend>
-                        <label for="seguro1" class="labelCheckbox">
-                            Seguro contra robos <input type="checkbox" aria-label="Seguro contra robos" name="seguro1"/>
-                        </label>
-                        <label for="seguro2" class="labelCheckbox">
-                            Seguro contra roturas <input type="checkbox" aria-label="Seguro contra roturas" name="seguro2"/>
-                        </label>
-                        <label for="seguro3" class="labelCheckbox">
-                            Seguro contra caídas <input type="checkbox" aria-label="Seguro contra caídas" name="seguro3"/>
-                        </label>
-                    </fieldset>
-                    <label for="categoria">
-                        Categoría <select name="categoria">
-                            <option value="-1" disabled selected>-- Selecciona --</option>
-                            <option value="1">CPU</option>
-                            <option value="2">GPU</option>
-                            <option value="3">RAM</option>
-                            <option value="4">Fuente de alimentación</option>
-                            <option value="5">Placa base</option>
-                            <option value="6">Disco duro</option>
-                            <option value="7">Torre</option>
-                            <option value="8">Otro</option>
-                        </select>  
-                    </label>
-                    <label for="checkboxAvisoAlta">
-                        <input type="checkbox" aria-label="Checkbox privacidad" name="checkboxAvisoAlta"/>
-                        Acepto sin reservas la <a href="infoLegal.html">política de protección de datos personales.</a>
-                    </label>
-                    <div class="divBotonesForm">
-                        <button type="button" id="botonCancelar">Cancelar</button>
-                        <button type="button" id="botonAceptar">Aceptar</button>
-                    </div>
-                </form>
-            </div>
+            <div id="divAlta"></div>
 
             <!-- Modificar -->
             <div id="divModificar">
@@ -229,7 +142,6 @@
 
         <!-- VUE 3 -->
         <script src="js/vue.global.js"></script>
-        <script type="module" src="js/main.js"></script>
 
         <!-- Componentes VUE -->
         <script type="module" src="js/componentes/producto.js"></script>
